# NoteEditor

./: .gitignore  AUTHORS  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
docs/: DD.md  FEATURE_LIST.md  HLD.md  PRD.md
docs/features/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md
docs/features/archive/: v0.2.0-old.md  v0.3.0-old.md
docs/test-guides/: FEATURE_001_v0.1.0_TEST_GUIDE.md  FEATURE_002_v0.1.0_TEST_GUIDE.md  FEATURE_003_v0.1.0_TEST_GUIDE.md  FEATURE_004_005_006_v0.1.0_TEST_GUIDE.md  FEATURE_007_v0.1.0_TEST_GUIDE.md  FEATURE_009_v0.2.0_TEST_GUIDE.md  FEATURE_010_v0.2.0_TEST_GUIDE.md  FEATURE_011_v0.2.0_TEST_GUIDE.md  FEATURE_012_v0.2.0_TEST_GUIDE.md  FEATURE_013_v0.3.0_TEST_GUIDE.md  FEATURE_015_v0.4.0_TEST_GUIDE.md  FEATURE_016_v0.4.0_TEST_GUIDE.md
fonts/: font_map.yaml
src/noteeditor/: __init__.py  cli.py  errors.py  pipeline.py
src/noteeditor/infra/: checkpoint.py  config.py  model_manager.py  ocr_backend.py  progress.py
src/noteeditor/models/: __init__.py  content.py  layout.py  page.py  slide.py
src/noteeditor/stages/: background.py  font.py  (+6 more)
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_background.py  test_builder.py  test_builder_editable.py  test_checkpoint.py  test_cli.py  test_config.py  test_content_models.py  test_errors.py  test_font.py  test_image.py  test_layout.py  test_layout_models.py  test_model_manager.py  test_models.py  test_ocr.py  test_ocr_backend.py  test_parser.py  test_pipeline.py  test_pipeline_v2.py  test_progress.py  test_slide_models.py  test_style.py
